# StageHand

./: Cargo.toml  README.md  pyproject.toml  test_real_weights.py  turbo_Cargo.toml  turbo_pyproject.toml  vmm_pyproject.toml
docs/: activation-stagehand.md  ai-toolkit-integration.md  case-study-flux-2048-lora.md  case-study-flux2dev-squareq.md  case-study-ltx-desktop-conductor.md  case-study-ltx2-bf16.md  conductor.md  per-layer-lr.md  residency-protection.md  selective-precision.md
examples/: basic_usage.py
src/stagehand/: __init__.py  block_swap.py  budget.py  budget_manager.py  config.py  errors.py  guards.py  layer.py  model_resolver.py  pinned_pool.py  pool.py  registry.py  residency.py  scheduler.py  source_resolver.py  telemetry.py  transfer.py  turbo.py  vmm_backend.py
src/stagehand/compat/: __init__.py  ramtorch.py
src/stagehand/optim/: __init__.py  offloaded_adamw.py
tests/: test_budget.py  test_compat_ramtorch.py  test_gpu_training.py  test_keep_resident.py  test_layer.py  test_model_resolver.py  test_optim_offloaded.py  test_registry.py  test_reserve_for_resident.py  test_scheduler.py  test_smoke.py
turbo_src/: cuda_ffi.rs  engine.rs  lib.rs
vmm_src/: allocator.rs  cuda_ffi.rs  dlpack.rs  error.rs  eviction.rs  handle.rs  lib.rs  prefetch.rs  python.rs  slab.rs
vmm_tests/: integration.rs  python_test.py
