[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stagehand"
version = "0.1.0"
description = "GPU memory orchestrator for large model inference and training. Block-swap streaming with mmap, pinned memory pools, async prefetch, and VRAM budget management."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Albert", email = "alex@example.com"},
]
keywords = ["gpu", "vram", "memory-management", "inference", "machine-learning", "block-swap", "mmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/CodeAlexx/stagehand"
Repository = "https://github.com/CodeAlexx/stagehand"
Issues = "https://github.com/CodeAlexx/stagehand/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stagehand"]
